--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>hi i am git</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore ratione porro voluptas eius quibusdam consectetur laborum, quasi ducimus eos, suscipit quam esse vel at voluptatem illo saepe autem distinctio eligendi.</p>
 </body>
 </html>
